deployment_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mux
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-mux
  template:
    metadata:
      labels:
        app: go-mux
    spec:
      containers:
      - name: go-mux-api
        image: gcr.io/firewalkers/go-mux-api:v24
        ports:
        - containerPort: 8010
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command: ["/cloud_sql_proxy",
          "-instances=firewalkers:us-west1:go-mux-db-inst=tcp:3306",
          "-credential_file=/secrets/cloudsql/sql_credentials.json"]
        volumeMounts:
          - name: my-secrets-volume
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
        - name: my-secrets-volume
          secret:
            secretName: cloudsql-instance-credentials
