service_db_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-mux-db
spec:
  selector:
    app: go-mux
  ports:
    - name: go-mux-db-port
      protocol: TCP
      port: 5432
      targetPort: 5432
