service_go-api_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-mux-api-lb
spec:
  type: LoadBalancer
  loadBalancerIP: go-mux-api-ip
  selector:
    app: go-mux-api
  ports:
    - name: go-mux-port
      protocol: TCP
      port: 8010
      targetPort: 8010
