ingress_config.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-mux-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.global-static-ip-name: "go-mux-api-ip-ing"
spec:
  rules:
  - host: api.firewalkers.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: go-mux-api-lb
          servicePort: http
      - path: /product
        backend:
          serviceName: go-mux-api-lb
          servicePort: http
      - path: /products
        backend:
          serviceName: go-mux-api-lb
          servicePort: http
